Wed Apr 17 19:45:27 2013  Aman Gupta  <tmm1@ruby-lang.org>

	* iseq.c (iseq_location_setup): re-use existing string when iseq has
	  the same path and absolute_path. [Bug #8149]

Wed Apr 17 11:38:37 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/test/unit/assertions.rb (Test::Unit::Assertions#assert):
	  UNASSIGNED is not a valid message.

Wed Apr 17 10:58:18 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (sleep_timeval): get rid of overflow on Windows where
	  timeval.tv_sec is not time_t but mere long.

Tue Apr 16 23:07:12 2013  Tanaka Akira  <akr@fsij.org>

	* ext/socket/unixsocket.c (unix_send_io): Suppress a warning by clang.
	  (unix_recv_io): Ditto.

Tue Apr 16 12:27:00 2013  Zachary Scott  <zachary@zacharyscott.net>

	* ext/sdbm/init.c: Fix comment indentation, by windwiny [Fixes GH-277]

Tue Apr 16 12:25:00 2013  Zachary Scott  <zachary@zacharyscott.net>

	* ext/socket/option.c: Document synonymous methods, by windwiny [GH-277]
	* ext/stringio/stringio.c: ditto
	* ext/io/wait/wait.c: ditto
	* ext/gdbm/gdbm.c: ditto
	* ext/dl/cfunc.c: ditto
	* ext/zlib/zlib.c: ditto
	* ext/win32ole/win32ole.c: ditto
	* ext/dbm/dbm.c: ditto
	* ext/json/generator/generator.c: ditto
	* ext/date/date_core.c: ditto

Tue Apr 16 11:23:00 2013  Zachary Scott  <zachary@zacharyscott.net>

	* ext/openssl/*: Document synonymous methods, by windwiny [GH-277]

Mon Apr 15 22:21:42 2013  Tanaka Akira  <akr@fsij.org>

	* ext/fiddle/depend: New file.

Mon Apr 15 22:01:02 2013  Akinori MUSHA  <knu@iDaemons.org>

	* misc/ruby-electric.el (ruby-electric-insert): Check
	  ruby-electric-is-last-command-char-expandable-punct-p here.

	* misc/ruby-electric.el (ruby-electric-closing-char): New
	  interactive function bound to closing characters.  Typing one of
	  those closing characters right after the matching counterpart
	  cancels the effect of automatic closing.  For example, typing
	  "{" followed by "}" simply makes "{}" instead of "{ } }".
