@@ -91,6 +91,12 @@
 #ifndef HAVE_TYPE_SOCKLEN_T
 typedef int socklen_t;
 #endif
+
+#define SOCKLEN_MAX \
+  (0 < (((socklen_t)0)-1) ? \
+   ~(socklen_t)0 : \
+   (((((socklen_t)1) << (sizeof(socklen_t) * CHAR_BIT - 2)) - 1) * 2 + 1))
+
 #ifndef RSTRING_SOCKLEN
 #  define RSTRING_SOCKLEN (socklen_t)RSTRING_LENINT
 #endif
